fix(nav): adjust navigation visibility thresholds for better user experience

--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -37,7 +37,7 @@ html
   margin: 0
   padding: 0
   height: 100%
-  border-top: 2px solid $color-text
+  border-top: 5px solid $color-accent-1
   -webkit-text-size-adjust: 100%
   -ms-text-size-adjust: 100%
 
